--- a/paper/IEEE-ICSC-2016/IEEE-ICSC-2016.tex
+++ b/paper/IEEE-ICSC-2016/IEEE-ICSC-2016.tex
@@ -1721,11 +1721,22 @@ A SPIN construct template creates constraint violation triples if all triple pat
 %\end{table}
 
 %Table \ref{tab:evaluation-constraint-types} displays the evaluation of the metadata quality on real world data sets regarding constraint types.
-Tables \ref{tab:evaluation-constraint-violations-1} and \ref{tab:evaluation-constraint-violations-2} show the results of the evaluation, more specifically the constraints and the constraint violations, which are caused by these constraints, in percent. The first numbers indicate the absolute amount of constraints and violations. The constraints and their raised constraint violations are grouped by vocabulary, the classification of their type according to the expressivity of constraint languages, and their severity level.
+Tables \ref{tab:evaluation-constraint-violations-1} and \ref{tab:evaluation-constraint-violations-2} show the results of the evaluation, more specifically the constraints and the constraint violations, which are caused by these constraints, in percent. The first numbers indicate the absolute amount of constraints and violations. The constraints and their raised violations are grouped by vocabulary, by which languages constraints are expressed, and their severity level.
 The numbers of evaluated triples and data sets differ between the vocabularies
 as we evaluated 3.8 billion QB, 480 million SKOS, and 10 million DDI-RDF triples.
 To be able to formulate hypotheses which apply for all vocabularies, 
-we only use normalized relative values representing the percentage of constraints and violations belonging to the respective class. There is a strong overlap between \emph{RDFS/OWL Based} and \emph{Constraint Language Based} constraint types as in many cases constraint types are expressible by classical constraint languages and OWL. This is the reason why the percentage values of constraints and violations grouped by the classification of their types according to the expressivity of constraint languages do not accumulate to 100\%. 
+we only use normalized relative values representing the percentage of constraints and violations belonging to the respective class. 
+
+There is a strong overlap between \emph{RDFS/OWL} and \emph{Constraint Language Based} constraint types as in many cases constraint types are expressible by classical constraint languages and OWL. This is the reason why the percentage values of constraints and violations grouped by the classification of constraint types according to the expressivity of constraint languages do not accumulate to 100\%. 
+
+As the evaluation is based on three vocabularies, 
+we cannot make valid general statements for all vocabularies,
+but we can formulate several hypotheses to direct the further development of constraint languages.
+As these hypotheses cannot be proved yet, 
+they still have to be verified or falsified
+by evaluating the quality of data represented by further well-established and newly developed vocabularies.
+
+\textcolor{red}{wurden die severity levels der constraints korrekt ausgezählt?}
 
 %by building the arithmetic mean over the individual vocabularies' percentage values. 
 %\tb{More than 80\% of the overall approx. 55 million constraint violations are caused by QB constraints.}
@@ -1906,9 +1917,9 @@ we only use normalized relative values representing the percentage of constraint
 		\textbf{\emph{CL}} & \textbf{64.1} & \textbf{65.3} & 40.0 & 0.0 \\
 		\textbf{\emph{RDFS/OWL}} & \textbf{66.7} & \textbf{65.3} & 40.0 & 0.0 \\
 		\hline
-		\textbf{\emph{info}} & \textbf{52.5} & \textbf{52.6} & 11.4 & 0.0 \\
-		\textbf{\emph{warning}} & 7.0 & 29.4 & 8.6 & \textbf{99.8} \\
-		\textbf{\emph{error}} & 40.6 & 18.0 & \textbf{80.0} & 0.3 \\
+		\textbf{\emph{info}} & \textbf{56.4} & \textbf{52.6} & 0.0 & 0.0 \\
+		\textbf{\emph{warning}} & 11.5 & 29.4 & 15.0 & \textbf{99.8} \\
+		\textbf{\emph{error}} & 32.1 & 18.0 & \textbf{85.0} & 0.3 \\
     \bottomrule
     \end{tabular}
     \\ \emph{C (constraints), CV (constraint violations)}
@@ -1932,32 +1943,26 @@ we only use normalized relative values representing the percentage of constraint
     %\\ \midrule
 		 & 17 & 5,540,988 & 115 & 54,751,851 \\
 		\hline
-		\textbf{\emph{SPARQL}} & \textbf{100.0} & \textbf{100.0} & \textbf{59.7} & \textbf{78.2} \\
-		\textbf{\emph{CL}} & 0.0 & 0.0 & 23.5 & 21.8 \\
-		\textbf{\emph{RDFS/OWL}} & 0.0 & 0.0 & 38.2 & 21.8 \\
+		\textbf{\emph{SPARQL}} & \textbf{100.0} & \textbf{100.0} & \textbf{63.2} & \textbf{78.2} \\
+		\textbf{\emph{CL}} & 0.0 & 0.0 & 34.7 & 21.8 \\
+		\textbf{\emph{RDFS/OWL}} & 0.0 & 0.0 & 35.6 & 21.8 \\
 		\hline
-		\textbf{\emph{info}} & \textbf{60.0} & 41.2 & \textbf{41.3} & 31.3 \\
-		\textbf{\emph{warning}} & 14.3 & \textbf{58.8} & 10.0 & \textbf{62.7} \\
-		\textbf{\emph{error}} & 25.7 & 0.0 & \textbf{48.8} & 6.1\\
+		\textbf{\emph{info}} & \textbf{70.6} & 41.2 & \textbf{42.3} & 31.3 \\
+		\textbf{\emph{warning}} & 29.4 & \textbf{58.8} & 18.7 & \textbf{62.7} \\
+		\textbf{\emph{error}} & 0.0 & 0.0 & \textbf{39.0} & 6.1\\
     \bottomrule
     \end{tabular}
     \\ \emph{C (constraints), CV (constraint violations)}
     \end{center}
 \end{table}
 
-As the evaluation is based on three vocabularies, 
-we cannot make valid general statements for all vocabularies,
-but we can formulate several hypotheses to direct the further development of constraint languages.
-As these hypotheses cannot be proved yet, 
-they still have to be verified or falsified
-by evaluating the quality of data represented by further well-established and newly developed vocabularies.
 %More than the half of them are $\mathcal{CT}_{B}$, nearly a third $\mathcal{CT}_{S}$, and only a sixth $\mathcal{CT}_{C}$ constraint types.
 %For DDI-RDF, QB, and SKOS, more than 50\% of the instantiated constraint types are $\mathcal{CT}_{B}$ constraint types 
 %(for QB even three quarters).
 %\emph{Existential quantifications} (\emph{R-86}, 32.4\%, DDI-RDF), \emph{data model consistency} (31.4\%, QB), and \emph{structure} (28.6\%, SKOS) are the constraint types the most constraints are instantiated from.
 %\tb{1. Fakten (diese Fakten bewirken eine Erhöhung der Datenqualität) 2. Hypothese (unsere Interpretation der Ergebnisse, unsere Behauptung)}
 
-Almost 60\% of all constraints, nearly 1/2 of the DDI-RDF, more than 1/2 of the QB, and 80\% of the SKOS constraints are \emph{SPARQL Based}.
+Almost 2/3 of all constraints, nearly 1/3 of the DDI-RDF, 60\% of the QB, and all SKOS constraints are \emph{SPARQL Based}. For well-established vocabularies, the most formulated constraints are \emph{SPARQL Based} (80\%). For newly developed vocabularies, however, the most expressed constraints are \emph{RDFS/OWL Based} (2/3). Nearly 80\% of all violations are caused by \emph{SPARQL}, 1/5 by \emph{Constraint Language}, and 1/5 by \emph{RDFS/OWL Based} constraints.
 %Hence, a significant amount of 46 \% of the constraints are directly extractable from formal specifications of well-established and newly defined vocabularies. 
 %\begin{hyp}
 %As a significant amount of 46 \% of the constraints are vocabulary constraints which can be expressed by modeling languages like RDF, RDFS, and OWL 2,
@@ -1966,39 +1971,33 @@ Almost 60\% of all constraints, nearly 1/2 of the DDI-RDF, more than 1/2 of the 
 %the further development of constraint languages should concentrate on expressing simple and especially complex constraints which up to now in most cases can only be expressed by plain SPARQL.  
 %\end{hyp}
 \begin{hyp}
-As a significant amount of almost 60\% of the constraints are \emph{SPARQL Based},
-the further development of constraint languages will especially concentrate on expressing such complex constraints which up to now in most cases can only be expressed by plain SPARQL. 
+The facts that 80\% of all violations are raised by \emph{SPARQL Based} constraints and that 2/3 of all constraints are SPARQL Based, increases the importance for constraint languages to enable to express SPARQL Based constraints. Thus, the further development of constraint languages especially concentrates on expressing SPARQL Based constraints as data quality can be significantly improved when suitable constraint languages are developed which enable to define \emph{SPARQL Based} constraints in an easy, concise, and intuitive way. The more elaborate a vocabulary is, the more sophisticated and complex constraints are specified using SPARQL. 
 \end{hyp} 
 
-Nearly 40\% of all constraints are \emph{RDFS/OWL Based} and only 23.5\% of all constraints are \emph{Constraint Language Based}.
+These constraints are of such complexity that  up to now in most cases they can only be expressed by plain SPARQL. It should be an incentive for language designers to devise languages which are more intuitive than SPARQL in a way that also domain experts, which are not familiar with SPARQL, can formulate respective constraints.
+
+Nearly 1/3 of all constraints are either \emph{RDFS/OWL} or \emph{Constraint Language Based}.
 
 \begin{hyp}
-The first step to make progress in the further development of constraint languages will be to cover the constraint types which can already be formulated using RDFS and OWL.
+The first step to make progress in the further development of constraint languages is to cover the constraint types which can already be formulated using RDFS and OWL.
 \end{hyp} 
 
-For well-established vocabularies, the most formulated constraints are \emph{SPARQL Based} (2/3). For newly developed vocabularies, however, the most expressed constraints are \emph{RDFS/OWL Based} ($>$1/2).
+The fact that only 1/5 of all violations result from \emph{RDFS/OWL Based} constraints, even though, 1/3 of all constraints are \emph{RDFS/OWL Based}, indicates good data quality for all vocabularies with regard to their formal specifications.
 
 \begin{hyp}
-The more elaborate a vocabulary is, the more detailed and complex constraints are defined by domain experts using plain SPARQL.
-\end{hyp} 
-
-These constraints are of such complexity that they can only be expressed by SPARQL. It should be an incentive for language designers to devise languages which are more intuitive than SPARQL in a way that also domain experts, which are not familiar with SPARQL, can formulate respective constraints.
-
-Nearly 80\% of all violations are caused by \emph{SPARQL Based}, 1/5 by \emph{Constraint Language Based}, and 1/5 by \emph{RDFS/OWL Based} constraints. The fact that only 1/5 of all violations result from \emph{RDFS/OWL Based} constraints, even though, almost 40\% of all constraints are \emph{RDFS/OWL Based}, indicates good data quality for all vocabularies with regard to their formal specifications.
-
-\begin{hyp}
-Data corresponds to the formal specifications of its vocabularies the data is conforming to. This demonstrates that constraint formulation in general works. 
+Data corresponds to formal specifications of vocabularies the data is conforming to. 
+%This demonstrates that constraint formulation in general works. 
 \end{hyp}
 
 %\tb{je nach hypothese spezifische aufgaben um die hypothese zu beweisen}
-Moreover, while 2/3 of the DDI-RDF violations result from \emph{RDFS/OWL Based} constraints,
-QB and SKOS violations are almost only raised by \emph{SPARQL Based} constraints.
-This means that for the well-established vocabularies, \emph{RDFS/OWL Based} constraints are almost completely satisfied which indicates generally a very impressive data quality, at least in the \emph{SBE} domain and for the basic requirements.
+While 2/3 of the DDI-RDF violations result from \emph{RDFS/OWL Based} constraints,
+QB and SKOS violations are only raised by \emph{SPARQL Based} constraints.
+This means that for well-established vocabularies, \emph{RDFS/OWL Based} constraints are almost completely satisfied which indicates generally a very impressive data quality, at least in the \emph{SBE} domain and for the basic requirements.
 %This demonstrates that data providers take account of the formal specifications of well-established vocabularies.
 For DDI-RDF, data providers still have to understand the vocabulary and of course, data can not have high quality if the specification is not yet stable.
 
 \begin{hyp}
-For well-established vocabularies, RDFS/OWL Based constraints are almost completely satisfied which indicates good data quality in general and that basic data quality requirements are met.
+For well-established vocabularies, RDFS/OWL Based constraints are almost completely satisfied which indicates good data quality in general and that basic data quality requirements are met. For newly developed vocabularies, however, data quality is poor as RDFS/OWL Based constraints are not fulfilled. 
 \end{hyp}
 
 It is likely that a newly developed vocabulary is still subject of constant change
@@ -2008,12 +2007,9 @@ In case newly developed vocabularies turn into well-established ones,
 data providers are experienced in publishing their data in conformance with these vocabularies
 and formal specifications are more elaborated. 
 As a consequence, \emph{RDFS/OWL Based} constraints are satisfied to a greater extend which leads to better data quality.  
+%
+The reason why we only defined \emph{SPARQL Based} constraints for assessing the quality of thesauri is that literature and practice especially concentrate on graph-based structures of thesauri by applying graph- and network-analysis techniques which can only be implemented by SPARQL.
 
-\begin{hyp}
-A significant amount of narrowly 80\% of the violations refer to SPARQL Based constraints that are not easily, concisely, and intuitively expressible by existing high-level constraint languages or RDFS and OWL which confirms the necessity to provide suitable constraint languages. Thus, the development of constraint languages will focus on enabling to express constraints which can up to now only be formulated by plain SPARQL.
-\end{hyp} 
-
-\emph{RDFS/OWL Based} constraints are expressible by the modeling languages RDFS and OWL 2. \emph{SPARQL Based} constraints, however, are only expressible by plain SPARQL. As almost 80\% of all violations are caused by \emph{SPARQL Based} constraints, data quality can be significantly improved when suitable constraint languages are developed which enable to define \emph{SPARQL Based} constraints in an easy, concise, and intuitive way.
 %Therefore, existing constraint languages have to be extended or new constraint languages have to be developed.
 
 %\begin{table}[H]
@@ -2079,11 +2075,11 @@ A significant amount of narrowly 80\% of the violations refer to SPARQL Based co
 50\% of all constraints are \emph{error}, 40\% are \emph{informational}, and 10\% are \emph{warning} constraints.
 \emph{Informational} constraints caused 1/3 and
 \emph{warning} constraints 2/3 of all violations.
-As the percentage of severe violations is very low for all vocabularies (6.1\%),
-data quality is high with regard to the severity level of constraints.
+%As the percentage of severe violations is very low for all vocabularies (6.1\%),
+%data quality is high with regard to the severity level of constraints.
 
 \begin{hyp}
-The percentage of severe violations is very low, compared to about 2/3 of warning and 1/3 of informational violations. This implies that proper constraint languages can significantly improve the data quality beyond fundamental requirements.
+Although, 1/2 of all constraints are error constraints, the percentage of severe violations is very low, compared to about 2/3 of warning and 1/3 of informational violations. This implies data quality is high with regard to the severity level of constraints and that proper constraint languages can significantly improve the data quality beyond fundamental requirements.
 \end{hyp} 
 
 80\% of the QB constraints are \emph{error} constraints.
@@ -2179,12 +2175,7 @@ Especially for newly developed vocabularies, constraint languages should be used
 %The constraints responsible for the largest amounts of constraint violations are \emph{DDI-RDF-C-LABELING-AND-DOCUMENTATION-06} and \emph{DDI-RDF-C-COMPARISON-VARIABLES-02} (both 547,916; DDI-RDF), \emph{DATA-CUBE-C-DATA-MODEL-CONSISTENCY-05} (45,514,102; QB), and \emph{SKOS-C-LANGUAGE-TAG-CARDINALITY-01} (2,508,903; SKOS).
 
 %Table \ref{tab:evaluation-expressivity-severity} shows the relations between the severity level of the violations caused by all 115 constraints and the classification according to the expressivity of constraint languages of the constraint types of the violations in percent. 
-80\% of the violations which are raised by either \emph{RDFS/OWL} or \emph{Constraint Language Based} constraints are caused by constraints with the severity level \emph{informational} (see Table \ref{tab:evaluation-expressivity-severity}) and almost all (94\%) of the violations which are caused by \emph{SPARQL Based} constraints are raised by \emph{warning} constraints. 
-
-%Table \ref{tab:evaluation-constraints-expressivity-severity} shows the relations between the severity level of all 115 constraints and the classification of their types according to the expressivity of constraint languages in percent.
-More than 1/2 of the \emph{vocabulary constraints} are \emph{error} constraints,
-more than 3/4 of the \emph{simple constraints} are \emph{informational} constraints, and
-\emph{complex constraints} are to the same extend \emph{informational} or \emph{error} constraints. 
+80\% of the violations which are raised by either \emph{RDFS/OWL} or \emph{Constraint Language Based} constraints are caused by constraints with the severity level \emph{informational} (see Table \ref{tab:evaluation-expressivity-severity}) and almost all (94\%) of the violations which are caused by \emph{SPARQL Based} constraints are raised by \emph{warning} constraints. Approx. 1/2 of all constraints are \emph{informational} constraints regardless how their types are classified according to the expressivity of constraint languages.
 
 %\begin{table}[H]
 		%\scriptsize
@@ -2286,13 +2277,13 @@ more than 3/4 of the \emph{simple constraints} are \emph{informational} constrai
 \end{table}
 
 \begin{hyp}
-There is significant demand for constraint languages that support the expression of complex constraints as 44\% of all complex constraints are also serious ones.
+Independent which language is used to formulate constraints, 1/2 of all constraints are informational, 1/3 are error, and 1/5 are warning constraints. 
+%Thereby, it does not matter which language is used to formulate constraints.
+Constraints expressed by RDFS/OWL or high-level constraint languages are of low severity, whereas the violation of constraints formulated by SPARQL is more serious.
+There is a significant demand for constraint languages that support the expression of SPARQL Based constraints as 94\% of all violations are caused by SPARQL Based constraints whose severity level is warning.
 \end{hyp}
 
-As \emph{vocabulary constraints} are part of formal specifications of vocabularies,
-violations of \emph{vocabulary constraints} are more severe than violations caused by \emph{simple constraints}.
-As SPARQL is still used to express \emph{complex constraints} and as 44\% of all \emph{complex constraints} are serious,
-there is an obvious need to develop constraint languages which enable to express \emph{complex constraints}.
+SPARQL seems to be used to formulate constraints whose violation is of higher severity than the violation of constraints expressed by either RDFS/OWL or high-level constraint languages. This is a surprising finding as the violation of \emph{RDFS/OWL Based} constraints should be of higher severity since these constraints may be part of vocabularies' formal specifications.
 
 \section{Conclusion and Future Work}
 
